Fix dropdowns being full width of the page
At least the following pages look better now:
- Limited official competitor adding (series)
- Official race rights (club)

This reverts the fix of "too long select fields" (8785f76).

--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -51,7 +51,6 @@ $inputHeight: 16px;
     height: 34px;
     margin-top: $inputHeight / 2;
     max-width: 100%;
-    width: 100%;
     -webkit-appearance: menulist-button;
   }
 
